[gd_scene load_steps=5 format=3 uid="uid://rsmkjpb16ldr"]

[ext_resource type="Script" path="res://Script/exit.gd" id="1_j1i48"]
[ext_resource type="Texture2D" uid="uid://chlng7teyrxae" path="res://entro/IMG_5348.png" id="2_f4jld"]
[ext_resource type="Texture2D" uid="uid://bem2nqlnse8uf" path="res://entro/lock.png" id="3_lo7av"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rw13"]
size = Vector2(1653, 1067)

[node name="Exit" type="Area2D"]
scale = Vector2(0.02, 0.02)
script = ExtResource("1_j1i48")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-21.5, -89.5)
shape = SubResource("RectangleShape2D_2rw13")

[node name="doorOpen" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_f4jld")

[node name="doorclosed" type="Sprite2D" parent="."]
texture = ExtResource("3_lo7av")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
